--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -8,7 +8,6 @@
     justify-content: center;
     align-items: center;
     background-color: transparent;
-
 }
 
 #navbarInner {
@@ -44,12 +43,13 @@
 }
 
 .olivine {
-    max-width: 20%;
-    max-height: 60px;
     position: absolute;
     transition: opacity 0.3s ease-in-out;
     opacity: 0;
+    object-fit: contain;
 }
+
+
 
 @media screen and (max-width: 768px) {
     #navbarInner {
