--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -8,6 +8,8 @@
     justify-content: center;
     align-items: center;
     background-color: transparent;
+    padding: 2% 0;
+
 }
 
 #navbarInner {
@@ -15,20 +17,29 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 100%;
+    width: 95%;
     height: 100%;
+    padding-bottom: 1%;
+}
+
+#logo,
+#navItems span {
+    font-size: 1.8vw;
 }
 
 #logo {
-    margin-left: 10px;
+    height: 170%;
+    width: auto;
+    margin-right: 2vw;
+    margin-left: 2vw;
 }
 
 #navItems {
     display: flex;
-    justify-content: space-around;
+    gap: 70px;
     align-items: center;
-    margin-right: 10px;
     color: white;
+    font-family: 'Handjet', cursive;
 }
 
 #mosaicContainer {
@@ -49,25 +60,27 @@
     object-fit: contain;
 }
 
-
-
 @media screen and (max-width: 768px) {
     #navbarInner {
         flex-direction: column;
         align-items: center;
+        gap: 10px;
+        padding-bottom: 2%;
+        /* Augmente légèrement l'espacement pour les petits écrans */
+
     }
 
     #logo {
-        margin-left: 0;
-        margin-bottom: 10px;
-    }
-
-    #navItems {
-        margin-right: 0;
-        margin-bottom: 10px;
+        margin: 0;
     }
 
     #navItems span {
         margin: 0 5px;
+    }
+
+    #logo,
+    #navItems span {
+        font-size: 3vw;
+        /* Augmente la taille de police pour les petits écrans */
     }
 }
