navbar finished and begin starry sky section

--- a/src/components/mainContent/MainContent.css
+++ b/src/components/mainContent/MainContent.css
@@ -18,7 +18,8 @@
         z-index: -1;
     }
 
-    .starrySkySection img,
+
+    /* A changer in fine dans les composants specifique */
     .skySection img,
     .groundSection img {
         width: 100%;
