Try to put a 3Dplanet, fail, and reset. Adding a galaxy3dobject.

--- a/src/components/starrySky/StarrySky.css
+++ b/src/components/starrySky/StarrySky.css
@@ -97,3 +97,13 @@
     width: 7vw;
     height: auto;
 }
+
+.galaxy1Wrapper {
+    width: 40vw;
+    height: 40vw;
+    position: absolute;
+    top: 14vw;
+    left: 88vw;
+    transform: translate(-50%, -50%);
+
+}
