--- a/src/components/starrySky/StarrySky.css
+++ b/src/components/starrySky/StarrySky.css
@@ -114,26 +114,26 @@
     position: absolute;
     top: 10vw;
     left: 3vw;
-    width: 4vw;
-    height: 4vw;
+    width: 6vw;
+    height: auto;
     z-index: 1;
 }
 
 .planet3 {
     position: absolute;
     top: 43vw;
-    left: 70vw;
-    width: 4vw;
-    height: 4vw;
+    left: 56vw;
+    width: 8vw;
+    height: auto;
     z-index: 1;
 }
 
 .planet4 {
     position: absolute;
-    top: 34vw;
-    left: 10vw;
-    width: 6vw;
-    height: 6vw;
+    top: 36vw;
+    left: 6vw;
+    width: 13vw;
+    height: auto;
     z-index: 1;
 }
 
@@ -197,5 +197,70 @@
     left: 17vw;
     width: 20vw;
     height: 20vw;
+    z-index: 1;
+}
+
+
+/* A enlever */
+.blackhole1 {
+    position: absolute;
+    top: 10vw;
+    left: 10vw;
+    width: 7vw;
+    height: auto;
+    z-index: 1;
+}
+
+.blackhole2 {
+    position: absolute;
+    top: 43vw;
+    left: 11vw;
+    width: 9vw;
+    height: auto;
+    z-index: 1;
+}
+
+.blackhole3 {
+    position: absolute;
+    top: 23vw;
+    left: 86vw;
+    width: 4vw;
+    height: auto;
+    z-index: 1;
+}
+
+.rings1 {
+    position: absolute;
+    top: 10vw;
+    left: 10vw;
+    width: 7vw;
+    height: auto;
+    z-index: 1;
+}
+
+.rings2 {
+    position: absolute;
+    top: 10vw;
+    left: 10vw;
+    width: 7vw;
+    height: auto;
+    z-index: 1;
+}
+
+.rings3 {
+    position: absolute;
+    top: 10vw;
+    left: 10vw;
+    width: 7vw;
+    height: auto;
+    z-index: 1;
+}
+
+.rings4 {
+    position: absolute;
+    top: 10vw;
+    left: 10vw;
+    width: 7vw;
+    height: auto;
     z-index: 1;
 }
