--- a/src/components/starrySkySection/StarrySky.css
+++ b/src/components/starrySkySection/StarrySky.css
@@ -15,6 +15,153 @@
 
 }
 
+
+.bigPlanetContainer {
+    position: absolute;
+    top: 44vw;
+    left: 62vw;
+    z-index: 6;
+}
+
+.planet1Container {
+    position: absolute;
+    top: 8vw;
+    left: 77vw;
+    z-index: 1;
+}
+
+.planet2Container {
+    position: absolute;
+    top: 10vw;
+    left: 3vw;
+    z-index: 1;
+}
+
+.planet3Container {
+    position: absolute;
+    top: 43vw;
+    left: 56vw;
+    z-index: 1;
+}
+
+.planet4Container {
+    position: absolute;
+    top: 36vw;
+    left: 6vw;
+    z-index: 1;
+}
+
+.planet5Container {
+    position: absolute;
+    top: 147vw;
+    left: 12vw;
+    z-index: 1;
+}
+
+.planet6Container {
+    position: absolute;
+    top: 140vw;
+    left: 60vw;
+    z-index: 1;
+}
+
+.planet7Container {
+    position: absolute;
+    top: 115vw;
+    left: 59vw;
+    z-index: 1;
+}
+
+.planet8Container {
+    position: absolute;
+    top: 101vw;
+    left: 21vw;
+    z-index: 1;
+}
+
+.planet9Container {
+    position: absolute;
+    top: 160vw;
+    left: 60vw;
+    z-index: 1;
+}
+
+.planet10Container {
+    position: absolute;
+    top: 103vw;
+    left: 32vw;
+    z-index: 1;
+}
+
+.planet11Container {
+    position: absolute;
+    top: 90vw;
+    left: 17vw;
+    z-index: 1;
+}
+
+
+.bigPlanet {
+    width: 50vw;
+    height: 50vw;
+}
+
+.planet1 {
+    width: 6vw;
+    height: 6vw;
+}
+
+.planet2 {
+    width: 6vw;
+    height: auto;
+}
+
+.planet3 {
+    width: 8vw;
+    height: auto;
+}
+
+.planet4 {
+    width: 13vw;
+    height: auto;
+}
+
+.planet5 {
+    width: 20vw;
+    height: 20vw;
+}
+
+.planet6 {
+    width: 12vw;
+    height: 12vw;
+}
+
+.planet7 {
+    width: 13vw;
+    height: 13vw;
+}
+
+.planet8 {
+    width: 10vw;
+    height: 10vw;
+}
+
+.planet9 {
+    width: 25vw;
+    height: 25vw;
+}
+
+.planet10 {
+    width: 4vw;
+    height: 4vw;
+}
+
+.planet11 {
+    width: 20vw;
+    height: 20vw;
+}
+
+
 .asteroides1,
 .asteroides2,
 .asteroides3,
@@ -91,106 +238,6 @@
     height: auto;
 }
 
-.planet1 {
-    position: absolute;
-    top: 8vw;
-    left: 77vw;
-    width: 6vw;
-    height: 6vw;
-    z-index: 1;
-}
-
-.planet2 {
-    position: absolute;
-    top: 10vw;
-    left: 3vw;
-    width: 6vw;
-    height: auto;
-    z-index: 1;
-}
-
-.planet3 {
-    position: absolute;
-    top: 43vw;
-    left: 56vw;
-    width: 8vw;
-    height: auto;
-    z-index: 1;
-}
-
-.planet4 {
-    position: absolute;
-    top: 36vw;
-    left: 6vw;
-    width: 13vw;
-    height: auto;
-    z-index: 1;
-}
-
-.planet5 {
-    position: absolute;
-    top: 122vw;
-    left: 28vw;
-    width: 12vw;
-    height: 12vw;
-    z-index: 1;
-}
-
-.planet6 {
-    position: absolute;
-    top: 100vw;
-    left: 60vw;
-    width: 8vw;
-    height: 8vw;
-    z-index: 1;
-}
-
-.planet7 {
-    position: absolute;
-    top: 58vw;
-    left: 10vw;
-    width: 7vw;
-    height: 7vw;
-    z-index: 1;
-}
-
-.planet8 {
-    position: absolute;
-    top: 101vw;
-    left: 21vw;
-    width: 10vw;
-    height: 10vw;
-    z-index: 1;
-}
-
-.planet9 {
-    position: absolute;
-    top: 120vw;
-    left: 60vw;
-    width: 9vw;
-    height: 9vw;
-    z-index: 1;
-}
-
-.planet10 {
-    position: absolute;
-    top: 103vw;
-    left: 32vw;
-    width: 4vw;
-    height: 4vw;
-    z-index: 1;
-}
-
-.planet11 {
-    position: absolute;
-    top: 66vw;
-    left: 17vw;
-    width: 20vw;
-    height: 20vw;
-    z-index: 1;
-}
-
-
 /* A enlever */
 .blackhole1 {
     position: absolute;
@@ -253,24 +300,4 @@
     width: 7vw;
     height: auto;
     z-index: 1;
-}
-
-.bigPlanet {
-    position: absolute;
-    top: 44vw;
-    left: 62vw;
-    width: 50vw;
-    height: 50vw;
-    z-index: 6;
-    width: 50vw;
-    height: 50vw;
-}
-
-.elementsWrapper {
-    position: absolute;
-}
-
-.bigPlanetWrapper {
-    position: absolute;
-    z-index: 3;
 }
