changing position + css for letters + animate letters

--- a/src/components/starrySkySection/letterPositions.css
+++ b/src/components/starrySkySection/letterPositions.css
@@ -1,102 +1,145 @@
-.scrumS,
-.scrumC,
-.scrumR,
-.scrumU,
-.scrumM,
-.crystalC,
-.crystalR,
-.crystalY,
-.crystalS,
-.crystalT,
-.crystalA,
-.crystalL {
+.scrumSContainer,
+.scrumCContainer,
+.scrumRContainer,
+.scrumUContainer,
+.scrumMContainer,
+.crystalCContainer,
+.crystalRContainer,
+.crystalYContainer,
+.crystalSContainer,
+.crystalTContainer,
+.crystalAContainer,
+.crystalLContainer {
     position: absolute;
     z-index: 4;
 }
 
-.scrumS {
+.scrumSContainer {
     top: 24vw;
     left: 36vw;
+}
+
+.scrumCContainer {
+    top: 24.5vw;
+    left: 42vw;
+}
+
+.scrumRContainer {
+    top: 24.9vw;
+    left: 48vw;
+}
+
+.scrumUContainer {
+    top: 25vw;
+    left: 55.3vw;
+}
+
+.scrumMContainer {
+    top: 24.7vw;
+    left: 63vw;
+}
+
+.crystalCContainer {
+    top: 15.30vw;
+    left: 28vw;
+}
+
+.crystalRContainer {
+    top: 16.5vw;
+    left: 34vw;
+}
+
+.crystalYContainer {
+    top: 16.6vw;
+    left: 39vw;
+}
+
+.crystalSContainer {
+    top: 16.5vw;
+    left: 43.8vw;
+}
+
+
+.crystalTContainer {
+    top: 16vw;
+    left: 48.4vw;
+}
+
+
+.crystalAContainer {
+    top: 16.3vw;
+    left: 53vw;
+}
+
+
+.crystalLContainer {
+    top: 16.3vw;
+    left: 59vw;
+}
+
+
+
+
+
+.scrumS {
     width: 5vw;
     height: auto;
 }
 
 .scrumC {
-    top: 24.5vw;
-    left: 42vw;
     width: 5.6vw;
     height: auto;
 }
 
 .scrumR {
-    top: 24.9vw;
-    left: 48vw;
     width: 7.8vw;
     height: auto;
 }
 
 .scrumU {
-    top: 25vw;
-    left: 55.3vw;
     width: 7vw;
     height: auto;
 }
 
 .scrumM {
-    top: 24.7vw;
-    left: 63vw;
     width: 5.6vw;
     height: auto;
 }
 
 .crystalC {
-    top: 15.30vw;
-    left: 28vw;
     width: 5.5vw;
     height: auto;
 }
 
 .crystalR {
-    top: 16.5vw;
-    left: 34vw;
     width: 6vw;
     height: auto;
 }
 
 .crystalY {
-    top: 16.6vw;
-    left: 39vw;
     width: 5vw;
     height: auto;
 }
 
 .crystalS {
-    top: 16.5vw;
-    left: 43.8vw;
     width: 4.5vw;
     height: auto;
 }
 
 
 .crystalT {
-    top: 16vw;
-    left: 48.4vw;
     width: 5.2vw;
     height: auto;
 }
 
 
 .crystalA {
-    top: 16.3vw;
-    left: 53vw;
     width: 5.6vw;
     height: auto;
 }
 
 
 .crystalL {
-    top: 16.3vw;
-    left: 59vw;
     width: 5.7vw;
     height: auto;
 }
