--- a/src/components/starrySkySection/StarrySky.css
+++ b/src/components/starrySkySection/StarrySky.css
@@ -5,6 +5,44 @@
     overflow-x: clip;
 }
 
+.loadingScreen {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #000;
+    /* Ou une couleur de fond de votre choix */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 10;
+}
+
+.loadingContent p {
+    margin-bottom: 20px;
+    color: #fff;
+    /* Ou la couleur de votre choix */
+}
+
+.launchButton {
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+    background-color: #1a73e8;
+    /* Ou la couleur de votre choix */
+    color: red;
+    border: none;
+    border-radius: 4px;
+    transition: background-color 0.3s;
+}
+
+.launchButton.disabled {
+    background-color: #aaa;
+    /* Couleur pour le bouton désactivé */
+    cursor: not-allowed;
+}
+
 .starrySkyBg {
     position: absolute;
     width: 100%;
