--- a/src/components/starrySkySection/StarrySky.css
+++ b/src/components/starrySkySection/StarrySky.css
@@ -7,34 +7,47 @@
 
 .loadingScreen {
     position: fixed;
+    background-image: url('assets/starrySkyAssets/loadingScreen.png');
+    background-size: cover;
+    background-position: center;
+    width: 100vw;
+    height: 100vh;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
-    background: #000;
-    /* Ou une couleur de fond de votre choix */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 10;
+    right: 0;
+    bottom: 0;
+    z-index: 1000;
 }
 
-.loadingContent p {
-    margin-bottom: 20px;
-    color: #fff;
-    /* Ou la couleur de votre choix */
-}
 
 .launchButton {
-    padding: 10px 20px;
-    font-size: 16px;
+    position: absolute;
+    top: 33%;
+    left: 45.5%;
     cursor: pointer;
-    background-color: #1a73e8;
-    /* Ou la couleur de votre choix */
-    color: red;
     border: none;
-    border-radius: 4px;
-    transition: background-color 0.3s;
+    border-radius: 50%;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+
+
+
+.launchButton:hover {
+    transform: scale(1.5);
+    animation: waves 2s linear infinite;
+}
+
+@keyframes waves {
+    0% {
+        box-shadow: 0 0 0 0rem rgba(0, 1, 1, 0.2), 0 0 0 1rem rgba(0, 1, 1, 0.2),
+            0 0 0 2rem rgba(0, 1, 1, 0.2), 0 0 0 5rem rgba(0, 1, 1, 0.2);
+    }
+
+    100% {
+        box-shadow: 0 0 0 1rem rgba(0, 1, 1, 0.2), 0 0 0 2rem rgba(0, 1, 1, 0.2),
+            0 0 0 5rem rgba(0, 1, 1, 0.2), 0 0 0 8rem rgba(0, 1, 1, 0);
+    }
 }
 
 .launchButton.disabled {
